<resources>
    <string name="app_name">MeetUp</string>

    <string name="login">LOGIN</string>
    <string name="email"><b>EMAIL</b></string>
    <string name="password"><b>PASSWORD</b></string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account"><u>Don\'t have an Account ?</u></string>
    <string name="or_connect_with">----Or Connect With----</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="phone_sign_in">Phone Sign In</string>

    <string name="name"><b>NAME</b></string>
    <string name="phone"><b>PHONE</b></string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account"><u>Already have an Account?</u></string>

    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="wait_for_the_code_i_sent_you">Wait for the code I sent You…</string>
    <string name="i_sent_you_a_code_it_will_be_detected_automatically_but_if_it_is_not_detected_you_can_put_it_below_manually_as_well">I sent you a code, it will be detected automatically, but if it is not detected, you can put it below manually as well</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="may_i_ask_your_phone_number">May I ask your phone number?</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>

    <!-- introduction pictures-->
    <integer-array name="img_id_arr">
        <item>@drawable/swipe1</item>
        <item>@drawable/swipe2</item>
        <item>@drawable/swipe3</item>
    </integer-array>
    <string name="title_activity_home_screen">MeetUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">All Users</string>
    <string name="menu_gallery">Friends</string>
    <string name="menu_slideshow">News</string>
    <string name="enter_message">Enter Message…</string>
    <string name="send_button">Send button</string>
    <string name="add_button">Add button</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
    <string name="logo">Logo</string>
    <string name="display_name">Display Name</string>
    <string name="text">Text</string>
    <string name="news">News</string>
    <string name="read_in_detail">Read in detail</string>
    <string name="enter_your_profile_name">Enter your Profile name:</string>
    <string name="username">Username</string>
    <string name="enter_a_short_description_about_yourself">Enter a short description about yourself:</string>
    <string name="please_select_your_hobbies">Please select your hobbies:</string>
    <string name="description">Description</string>
    <string name="register">Register</string>

    <array name="genres">
        <item>Books</item>
        <item>Films</item>
        <item>Games</item>
        <item>Music</item>
        <item>Science</item>
        <item>Sports</item>
    </array>
</resources>
