<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:background="@drawable/friend_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="95dp"
        android:text="@string/enter_your_profile_name"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/username"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="20dp"
        android:text="@string/enter_a_short_description_about_yourself"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/description"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/getStartedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="20dp"
        android:text="@string/please_select_your_hobbies"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/hobbies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:entries="@array/genres"
        android:textSize="20sp" />

    <Button
        android:id="@+id/hobbiesContinueButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:background="#ff4081"
        android:backgroundTint="#ff4081"
        android:elevation="24dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</LinearLayout>
