<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28000000"
    tools:context=".ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/friend_chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#092F9E"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewChat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/friend_chat_toolbar"
        android:layout_above="@+id/view"/>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/send_linear"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/send_linear"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#FFFFFF"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:padding="5dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_add_black_24dp"
            android:contentDescription="@string/add_button" />

        <View
            android:layout_width="0dp"
            android:layout_weight="0.03"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/textSend"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@null"
            android:textSize="16sp"
            android:hint="@string/enter_message" />

        <View
            android:layout_width="0dp"
            android:layout_weight="0.03"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <ImageView
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:padding="5dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_send_black_24dp"
            android:contentDescription="@string/send_button" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/send_linear"
        android:background="@android:color/darker_gray"/>
</RelativeLayout>